Adicionado integração com supabase, removido mocks, adicionado dados reais

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,5 +18,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "exclude": ["supabase/functions"]
 }
