--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,5 +26,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/lib"],
+  "exclude": ["supabase/functions"]
 }
